[package]
name = "hello-world"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.6.10", features = ["macros"] }
shuttle-axum = { path = "../../services/shuttle-axum" }
shuttle-runtime = { path = "../../runtime" }
shuttle-turso = { path = "../../resources/turso" }
# shuttle-shared-db = { version = "0.18.0", path = "../../resources/shared-db/", features = ["postgres"] }
# shuttle-axum = { version = "0.18.0" }
# shuttle-runtime = { version = "0.18.0" }
libsql-client = "0.27"
tokio = { version = "1.26.0" }
serde = { version = "1.0.164", features = ["derive"] }
sqlx = { version = "0.6.3", features = [
  "runtime-tokio-native-tls",
  "postgres",
] }
serde_json = "1.0.99"
tracing = "0.1.37"
tracing-opentelemetry = "0.19.0"
tracing-subscriber = { version = "0.3.17", features = ["json", "fmt"] }
lazy_static = "1.4.0"
opentelemetry = { version = "0.19.0", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.12.0", features = ["http-proto", "reqwest-client"] }
tonic = "0.9.2"
opentelemetry-http = { version = "0.8.0", features = ["reqwest"] }
reqwest = "0.11.18"
tracing-appender = "0.2.2"
tower-http = { version = "0.4.1", features = ["trace", "cors"] }
tracing-serde = "0.1.3"
chrono = "0.4.26"
tower = "0.4.13"
http = "0.2.9"
hyper = "0.14.27"
